# bedrock

./: .dockerignore  .gitignore  Dockerfile.crust  Dockerfile.stratum  Makefile  README.md
.github/workflows/: crust.yml  stratum.yml
bot/: .gitignore  Cargo.toml
bot/crates/crust/: Cargo.toml
bot/crates/crust/src/: controller.rs  discord.rs  kubernetes.rs  lib.rs  main.rs  nats.rs  scheduler.rs
bot/crates/mantle/: Cargo.toml
bot/crates/stratum/: Cargo.toml
bot/crates/stratum/src/: config.rs  coordination.rs  discord.rs  main.rs  nats.rs  runner.rs  shard_manager.rs
bot/crust/: Cargo.toml
bot/crust/crust-controller/: Cargo.toml
bot/crust/crust-controller/src/: lib.rs
bot/crust/crust-discord/: Cargo.toml
bot/crust/crust-discord/src/: lib.rs
bot/crust/crust-kubernetes/: Cargo.toml
bot/crust/crust-kubernetes/src/: lib.rs
bot/crust/crust-main/: Cargo.toml
bot/crust/crust-main/src/: main.rs
bot/crust/crust-nats/: Cargo.toml
bot/crust/crust-nats/src/: lib.rs
bot/crust/crust-scheduler/: Cargo.toml
bot/crust/crust-scheduler/src/: lib.rs
bot/crust/crust-types/: Cargo.toml
bot/crust/crust-types/src/: error.rs  lib.rs  types.rs
bot/mantle/: Cargo.toml
bot/mantle/mantle-main/: Cargo.toml
bot/mantle/mantle-main/src/: main.rs
bot/stratum/: Cargo.toml
bot/stratum/stratum-config/: Cargo.toml
bot/stratum/stratum-coordination/: Cargo.toml
bot/stratum/stratum-coordination/src/: lib.rs
bot/stratum/stratum-discord/: Cargo.toml
bot/stratum/stratum-discord/src/: lib.rs
bot/stratum/stratum-main/: Cargo.toml
bot/stratum/stratum-main/src/: main.rs
bot/stratum/stratum-nats/: Cargo.toml
bot/stratum/stratum-nats/src/: lib.rs
bot/stratum/stratum-runner/: Cargo.toml
bot/stratum/stratum-runner/src/: lib.rs
bot/stratum/stratum-shard-manager/: Cargo.toml
bot/stratum/stratum-shard-manager/src/: lib.rs
bot/util/: Cargo.toml
bot/util/src/: lib.rs
crd/: shardcluster-crd.yaml
docs/: PRODUCTION_CONFIG.md
helm/nats-cluster/: Chart.yaml  values-dev.yaml  values-production.yaml  values.yaml
helm/nats-cluster/templates/: _helpers.tpl  configmap.yaml  poddisruptionbudget.yaml  service.yaml  statefulset.yaml
k8s/: nats-cluster.yaml  operator-deployment.yaml  rbac.yaml  twilight-gateway-proxy.yaml
scripts/: cleanup-nats-dev.sh  debug-deployment.sh  deploy-kind.sh  deploy-nats-dev.sh  deploy-production.sh  fix-docker-permissions.sh  port-forward-nats.sh  setup-k8s-dev.sh  shutdown-deployment.sh  shutdown-production-deployment.sh  test-integration.sh  verify-deployment.sh
