[workspace]
resolver = "3"
members = [
    "crust-main",
    "crust-types", 
    "crust-discord",
    "crust-nats",
    "crust-kubernetes",
    "crust-controller",
    "crust-scheduler"
]

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "signal"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25", features = ["latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-http = { git = "https://github.com/twilight-rs/twilight", branch = "main" }
async-nats = "0.42"
backon = "1.3.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
thiserror = "2.0"
util = { path = "../util" }