[package]
name = "crust"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight-http = "0.16.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "signal"] }
kube = { version = "0.95", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-nats = "0.42"
backoff = { version = "0.4.0", features = ["tokio"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
thiserror = "1.0"
