[package]
name = "mantle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-nats = "0.42.0"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twilight-model = "0.16.0"
