[package]
name = "stratum"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight-gateway = "0.16.0"
async-nats = "0.42"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
anyhow = "1.0.98"
twilight-http = "0.16.0"
futures-util = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
console-subscriber = "0.4.1"
serde_json = "1.0.140"
twilight-model = "0.16.0"
mimalloc = { version = "0.1.47", optional = true }

[features]
mimalloc = ["dep:mimalloc"]
default = ["mimalloc"]

[build-dependencies]
