[package]
name = "crust-main"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crust"
path = "src/main.rs"

[dependencies]
crust-types = { path = "../crust-types" }
crust-controller = { path = "../crust-controller" }
crust-nats = { path = "../crust-nats" }
crust-scheduler = { path = "../crust-scheduler" }
anyhow = { workspace = true }
futures = { workspace = true }
kube = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
