[package]
name = "mantle"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight-model = { workspace = true }
twilight-http = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }